--- a/Game.css
+++ b/Game.css
@@ -164,17 +164,46 @@ footer .in .popo{
     font-size: 2em;
     font-weight: 700;
 }
-footer .in p{
-    color: #dbd9b9;
+footer .in ul li{
+    list-style: none;
+    height: 50px;
+    width: 50px;
+    margin: 5px;
+    border-radius: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border: 1px solid #1aeeef;
+}
+footer .in ul li:hover{
+    background: #1aeeef;
+    border: none;
+    box-shadow: 0 0 10px #1aeeef;
 }
 footer .in ul a{
     color: rgb(0, 0, 0);
 }
 footer .in ul{
-    color: antiquewhite;
+    margin: 10px 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 footer .in ul li{
+    list-style: none;
+    height: 50px;
+    width: 50px;
+    margin: 5px;
+    border-radius: 50%;
     display: flex;
+    justify-content: center;
+    align-items: center;
+    border: 1px solid #1aeeef;
+}
+footer .in ul li:hover{
+    background: #1aeeef;
+    border: none;
+    box-shadow: 0 0 10px #1aeeef;
 }
 footer .in ul li a i{
     font-size: 1.5em;
