--- a/Game.css
+++ b/Game.css
@@ -78,6 +78,7 @@ header .iogo{
 .lolo .caca .card{
     width: 200px;
     border-radius: 10px;
+    margin: 20px 40px;
     background: #1b2141;
     overflow: hidden;
 }
